Fix a bunch of code analysis minor issues.
  * Some new tests.